--- a/M06.looting_workbook/.godot/editor/editor_layout.cfg
+++ b/M06.looting_workbook/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://lessons/chest/lock.png")
+dock_filesystem_selected_paths=PackedStringArray("res://chest.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://practices/", "res://lessons/", "res://lessons/chest/", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-271
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -29,22 +29,23 @@ dock_5="Inspector,Node,History,GDQuest"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://lessons/mini_dungeon.tscn", "res://chest.tscn")
-current_scene="res://chest.tscn"
+current_scene="res://lessons/mini_dungeon.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
 position=Vector2i(0, 50)
-size=Vector2i(2880, 1608)
+size=Vector2i(2880, 1610)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://chest.gd"]
+selected_script="res://chest.gd"
 open_help=["Node2D"]
 script_split_offset=400
 list_split_offset=0
