--- a/M06.looting_workbook/.godot/editor/editor_layout.cfg
+++ b/M06.looting_workbook/.godot/editor/editor_layout.cfg
@@ -29,11 +29,11 @@ dock_5="Inspector,Node,History,GDQuest"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://lessons/mini_dungeon.tscn", "res://chest.tscn")
-current_scene="res://chest.tscn"
+current_scene="res://lessons/mini_dungeon.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
