--- a/M06.looting_workbook/.godot/editor/editor_layout.cfg
+++ b/M06.looting_workbook/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://chest.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://practices/", "res://lessons/", "res://lessons/chest/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://lessons/items/potion.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://practices/", "res://lessons/", "res://lessons/items/", "res://lessons/chest/", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -38,15 +38,15 @@ selected_bottom_panel_item=0
 [EditorWindow]
 
 screen=0
-mode="windowed"
-position=Vector2i(0, 50)
+mode="fullscreen"
+position=Vector2i(0, 0)
 size=Vector2i(2880, 1608)
 
 [ScriptEditor]
 
 open_scripts=["res://chest.gd"]
-selected_script="res://chest.gd"
-open_help=["Node2D"]
+selected_script=""
+open_help=["InputEvent", "InputEventMouse", "InputEventMouseButton", "Node2D"]
 script_split_offset=400
 list_split_offset=0
 zoom_factor=1.0
